--- a/app/views/cohorts/schedules/form_fields/_schedule_labs_fields.html.erb
+++ b/app/views/cohorts/schedules/form_fields/_schedule_labs_fields.html.erb
@@ -8,6 +8,6 @@
         <br>
       <% end %>
     </div>
-    <button id="add-lab" class="btn btn-info">+ lab</button>
+    <button id="add-lab" class="btn btn-primary">+ lab</button>
   </div>
 </div>
