--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -1,4 +1,4 @@
-<div class="containter-fluid">
+<div class="containter-fluid" style="margin-bottom: 3%">
   <div class="schedule-title">
     <h1>Week <%= @schedule.week %>, Day <%= @schedule.day %></h1>
     <h4><%= @schedule.pretty_date %></h4>
@@ -68,9 +68,11 @@
 
 
       <%= link_to "edit schedule", edit_cohort_schedule_path(@schedule.cohort, @schedule), id: "edit", class: "btn btn-primary" %>
-
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
   </div>
 </div>
-<br>
-</br>
+
