--- a/app/views/cohorts/schedules/form_fields/_schedule_labs_fields.html.erb
+++ b/app/views/cohorts/schedules/form_fields/_schedule_labs_fields.html.erb
@@ -3,8 +3,13 @@
     <div id="add-labs">
       <%= f.fields_for :labs, schedule.labs do |lab_form|%>
          <br>
-        <%= lab_form.label :name %>
-        <%= lab_form.text_field :name, class: "form-control" %>
+         <div id="lab-<%= lab_form.object.id %>">
+          <%= lab_form.label :name %>
+          <%= lab_form.text_field :name, class: "form-control" %>
+          <% if !schedule.new_record?%>
+            <%= link_to "remove lab",cohort_schedule_remove_lab_path(schedule.cohort, schedule, lab_id: lab_form.object), method: "post", remote: true, class:"btn btn-primary" %>
+          <% end %>
+          </div>
         <br>
       <% end %>
     </div>
