dynamically add and delete objectives on new and edit schedule forms

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -133,3 +133,37 @@ ul > #active-cohort-btn:hover {
     display: block;
 }
 
+html > form > div > button.form-btn {
+  height: 43px;
+  width: 125px;
+}
+
+#add-lab{
+  height: 43px;
+  width: 125px;
+}
+
+#add-activity {
+  height: 43px;
+  width: 125px;
+}
+
+#add-objective {
+  height: 43px;
+  width: 125px;
+}
+
+#remove-activity {
+  height: 43px;
+  width: 125px;
+}
+
+#remove-lab {
+  height: 43px;
+  width: 125px;
+}
+
+
+
+
+
