updated labs section of schedule show page in github template

--- a/app/views/cohorts/schedules/github_show.html.erb
+++ b/app/views/cohorts/schedules/github_show.html.erb
@@ -67,16 +67,17 @@
 
 <div class="row schedule-info">
 
-<h3>Labs</h3>
-  <ul>
-    <%@schedule.labs.each do |lab| %>
+<% if !@schedule.labs.empty? %>
+    <h3>Labs</h3>
+      <ul>
+        <%@schedule.labs.each do |lab| %>
 
-    <li>
-      <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @schedule.cohort.name %>"><%= lab.name %></a>
-    </li>
-    <%end %>
-  </ul>
-
+        <li>
+          <a href="http://www.github.com/learn-co-students/<%= lab.name %>-<%= @schedule.cohort.name %>"><%= lab.name %></a>
+        </li>
+        <%end %>
+      </ul>
+<% end %>
 </div>
 
 
