--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -23,7 +23,7 @@
         <div id="rooms">
           <%= render partial: "cohorts/schedules/room_reservations", locals: {schedule: @schedule} %>
         </div>
-         <%= link_to "reserve rooms", cohort_schedule_reserve_path(@schedule.cohort, @schedule), method: "post", remote: true, id: "reserve-rooms", class: "btn btn-primary" %>
+         <%= link_to "reserve rooms", reserve_rooms_path(schedule_id: @schedule.id), method: "post", remote: true, id: "reserve-rooms", class: "btn btn-primary" %>
       </div>
     </div>
     
