--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -16,7 +16,7 @@
           <br>
           <%= render partial: "cohorts/schedules/deploy_history", locals: {schedule: @schedule, github_wrapper: nil} %>
         </div>
-        <%= link_to "deploy schedule", cohort_schedule_deploy_path(@schedule.cohort, @schedule), method: "post", remote: true, id: "deploy", class: "btn btn-primary" %>
+        <%= link_to "deploy schedule", deploy_path(schedule_id: @schedule.id), method: "post", remote: true, id: "deploy", class: "btn btn-primary" %>
       <div class="reserved">
           <br>
         <strong>Room Reservations:</strong>
