--- a/app/templates/schedule.html.erb
+++ b/app/templates/schedule.html.erb
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-  <% schedule.activities.each do |activity|  %>
+  <% schedule.activities.sort_by {|a| a.start_time}.each do |activity|  %>
     <tr>
       <td><%= activity.start_hour %></td>
       <td><%= activity.description %></td>
