fix room reservations view to format start time humanely

--- a/app/views/cohorts/schedules/_room_reservations.html.erb
+++ b/app/views/cohorts/schedules/_room_reservations.html.erb
@@ -6,7 +6,7 @@
           <a href="<%= event.link %>"><strong><%= event.name %></strong></a>
         </li>
         <li>location: <%= event.location %></li>
-        <li>reserved at: <%= event.reserved_at %></li>
+        <li>reserved at: <%= event.reserved_at.strftime("%I:%M") %></li>
         <li>reserved by: <%= event.reserved_by %></li>
       <% end %>
     </ul>
