fix bug with add lab/objectve/activity field on schedule form hbs templates for new fields didn't give data attributes to new fields

--- a/app/assets/javascripts/templates/add-activity.hbs
+++ b/app/assets/javascripts/templates/add-activity.hbs
@@ -8,7 +8,7 @@
 
 <label for="schedule_activities_attributes_{{newIdNum}}_description">Description</label>
 
-<input class="form-control" type="text" name="schedule[activities_attributes][{{newIdNum}}][description]" id="schedule_activities_attributes_' + new_id_num + '_description">
+<input class="form-control" type="text" name="schedule[activities_attributes][{{newIdNum}}][description]" id="schedule_activities_attributes_' + new_id_num + '_description" data-{{addType}}-position={{newIdNum}}>
 
 <br>
 
