--- a/app/assets/javascripts/templates/add-lab.hbs
+++ b/app/assets/javascripts/templates/add-lab.hbs
@@ -1,4 +1,4 @@
 <label>Name</label>
-<input class="form-control" type="text" name="schedule[labs_attributes][{{newIdNum}}][name]" id="schedule_labs_attributes_{{newIdNum}}_name">
+<input class="form-control" type="text" name="schedule[labs_attributes][{{newIdNum}}][name]" id="schedule_labs_attributes_{{newIdNum}}_name" data-{{addType}}-position={{newIdNum}}>
 <br>
 
