add video link partial and form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
             <li id="new-schedule">
               <%= render partial: "layouts/new_schedule_link" %>
             </li>
+            <li id="add-video">
+              <%= render partial: "layouts/add_video_link" %>
+            </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
