--- a/app/views/layouts/_add_video_link.html.erb
+++ b/app/views/layouts/_add_video_link.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.has_cohort && current_page?(controller: "cohorts", action: "show", slug: current_user.active_cohort.name) %>
-  <a href="#" data-toggle="modal" data-target="#myModal">add video link</a>
+  <a href="#" data-toggle="modal" data-target="#myModal" id="video_modal">add video link</a>
   <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
