--- a/app/views/cohorts/schedules/_schedule_blogs.html.erb
+++ b/app/views/cohorts/schedules/_schedule_blogs.html.erb
@@ -3,10 +3,17 @@
     <p>
       <ul>
         <% schedule.blog_assignments.each do  |blog_assignment| %>
-           <li>
-              <a href="<%= blog_assignment.student.blog_url %>"><%= blog_assignment.student.full_name %></a>
+          <% if blog_assignment.student.has_submitted_blog? %>
+             <li>
+                <a href="<%= blog_assignment.student.blog_url %>"><%= blog_assignment.student.full_name %></a>
+              </li>
+          <% else %>
+            <li>
+              <%= blog_assignment.student.full_name %>
             </li>
+          <% end %>
         <% end %>
       </ul>
     </p>
 <% end %>
+
