--- a/app/views/cohorts/schedules/show.html.erb
+++ b/app/views/cohorts/schedules/show.html.erb
@@ -31,8 +31,7 @@
     <!-- BLOGS -->
     <div class="row schedule-info" style="clear: both;">
 
-      <%= render partial: 'cohorts/schedules/schedule_blogs', locals: {schedule: @schedule} %>
-
+      <!-- TODO: add blogs back after we figure out why student uploader isn't working -->
     </div>
 
 
