temp fix for deployer

--- a/app/templates/schedule.html.erb
+++ b/app/templates/schedule.html.erb
@@ -27,7 +27,7 @@
           <ul>
             <% schedule.blog_assignments.each do  |blog_assignment| %>
                <li>
-                  <a href="<%= blog_assignment.student.blog_url %>"><%= blog_assignment.student.full_name %></a>
+                  <a href="<%= blog_assignment.student.try(:blog_url) %>"><%= blog_assignment.student.try(:full_name) %></a>
                 </li>
             <% end %>
           </ul>
@@ -79,3 +79,4 @@
       </ul>
 <% end %>
 </div>
+
