--- a/app/views/cohorts/schedules/form_fields/_form_fields.html.erb
+++ b/app/views/cohorts/schedules/form_fields/_form_fields.html.erb
@@ -5,25 +5,31 @@
 
         <!-- OBJECTIVES -->
         <h2>Objectives</h2>
+        <p>Enter the objectives for the day.</p>
         <%= render partial: 'cohorts/schedules/form_fields/schedule_objectives_fields', locals: {f: f, schedule: schedule} %>
         <!-- END OBJECTIVES -->
 
         <!-- NOTES -->
         <h2>Notes</h2>
+        <p>Enter special notes for the day.</p>
         <%= render partial: 'cohorts/schedules/form_fields/schedule_notes_fields', locals: {f: f, schedule: schedule} %>
         <!-- END NOTES -->
 
         <!-- LABS -->
         <h2>Labs</h2>
+        <p>Enter the assigned lab's canonical repo slug. The link will be customized for the cohort's deployed version.</p>
         <%= render partial: 'cohorts/schedules/form_fields/schedule_labs_fields', locals: {f: f, schedule: schedule} %>
         <!-- END LABS -->
 
         <h2>Activities</h2>
+        <p>Enter the day's scheduled activities. If you select "Reserve Room", the application will attempt to book an available classroom.</p>
         <%= render partial: 'cohorts/schedules/form_fields/schedule_activities_fields', locals: {f: f, schedule: schedule} %>
 
-        <div class="form-group">
-          <div class="col-lg-4">
-          <%= f.label :deploy %>
-          <%= f.check_box :deploy %>
-          </div>
+      <div class="form-group">
+        <div class="col-lg-12">
+        <p>Check this box if you wish to deploy the schedule immediately.</p>
+        <%= f.label :deploy %>
+        <%= f.check_box :deploy %>
         </div>
+      </div>
+
